# llm-sport-commentator

./: .gitignore  README.md  app.py  frontend.py  hello.py  pyproject.toml  requirements.txt  video.py
templates/: index.html  result.html
